<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMarineProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="shot">Shot</string>
    <string name="More">More</string>
    
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="Setting">Setting</string>
    
    <string name="inputhint">Please enter new node name</string>
    <string name="input_label">New Node: </string>
    
    <string name="inputhint2">Parent Node:</string>
    <string name="inputhint2_1">Node you want to delete:</string>
    
    <string name="inputhint3">Children:</string>
    
     <string name="inputhint4">Types:</string>
     
     <string name="save">Save</string>
     
  
     
      <string name="Cancel">Cancel</string>
      
      <string name="insert_after">insert_after</string>
      
      <string name="insert_in_middle">insert_in_middle</string>
      
      <string name="Select">Select</string>
      
      <string name="Back">Back</string>
</resources>
