<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
   <TextView android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/imageName"
             android:gravity="center"
             android:textSize="30sp"
             android:textColor="@android:color/holo_blue_dark"
             android:layout_weight="0.4"
             android:textStyle="bold"/>
   
   <ImageView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/imageshow"
              android:layout_gravity="center"
              android:layout_weight="2"/>
   
   <LinearLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.3">
       <Button android:text="@string/Select"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/select"
               android:paddingLeft="20dp"
               android:layout_weight="1"/>
       
        <Button android:text="@string/Back"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/backFromImage"
               android:layout_marginRight="5dp"
               android:layout_weight="1"/>
   </LinearLayout>
   
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" 
        android:paddingBottom="1dp">

        <Button
            android:id="@+id/pic_add"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/add" 
            android:onClick="add_triggered"/>

        <Button
            android:id="@+id/pic_delete"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/delete" 
            android:onClick="delete_triggered"/>

        <Button
            android:id="@+id/pic_Prefer"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/Setting" 
            android:onClick="setting_triggered"/>
    </LinearLayout>
</LinearLayout>
