<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/add">
    
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:orientation="horizontal" >

       <TextView android:text="@+string/input_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
       
       <EditText android:id="@+id/newNode"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:hint="@+string/inputhint"/>
   </LinearLayout>
   
   <!-- Second row -->
    <LinearLayout android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
       
       <TextView android:text="@+string/inputhint2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
       
      <Spinner android:id="@+id/parent_spiner"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
   </LinearLayout>
   
    <!-- Third row -->
    <LinearLayout android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
       <TextView android:text="@+string/inputhint3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
       
      <Spinner android:id="@+id/children_spiner"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
   </LinearLayout>
   
    <!-- Radion group -->
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
      
       <!--  <TextView android:text="@+string/inputhint4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/> -->
      
        <RadioGroup android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioGroup"
                    android:orientation="vertical">
                    
             <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
           <TextView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/insert_after"/>
          
            <RadioButton android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/insert_after"
                 android:onClick="OnRadioButtonClicked"
                 android:checked="true"/>
            </LinearLayout>
            
              <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
             <TextView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/insert_in_middle"/>
             
            <RadioButton android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/insert_between"
                 android:onClick="OnRadioButtonClicked"/>
            </LinearLayout>
        </RadioGroup>
    </LinearLayout>
    
     <!-- To click save or cancel  -->
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/save"
                android:id="@+id/toAdd"/> 
        
         <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cancel"
                android:id="@+id/toCancel"/> 
    </LinearLayout>
</LinearLayout>
